Added CSS styling and bio text

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Open+Sans&display=swap" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -16,7 +22,8 @@
     </header>
 
     <main>
-        <section>
+        <section id="hero">
+            <!--Hero section, profile image, name and location-->
         <img src="img/avataaars.svg" alt="My avatar">
 
         <div>
@@ -26,18 +33,24 @@
         </div>
         </section>
 
-        <section>
+        <section id="bio">
             <!--Biography section & personal info-->
 
             <div>
                 <p>Hello my name is Ari Kaminski. I hope to be a java developer soon!</p>
+                <p>My favorite things are Cooking, watching the Philadelphia Eagles, and playing games online. </p>
+                <p>I have a dog named Van. He is an 11 year old American Staffordshire Terrier. </p>
+                
 
             </div>
         </section>
-    </main>
-
     
+    </main>
+    <footer>
 
+        ©2021 --- Ari Kaminski
+
+    </footer>
 
 
 </body>
