adding hobbies list

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <section id="bio">
             <!--Biography section & personal info-->
 
+            <h2>Biography:</h2>
+
             <div>
                 <p>Hello my name is Ari Kaminski. I hope to be a java developer soon!</p>
                 <p>My favorite things are Cooking, watching the Philadelphia Eagles, and playing games online. </p>
@@ -43,6 +45,19 @@
                 
 
             </div>
+        </section>
+
+        <section id="hobbies">
+            <!--Section for list of hobbies etc-->
+            <h2>Hobbies: </h2>
+                <ul>
+                    <li>Cooking and Grilling</li>
+                    <li>Reading fiction books</li>
+                    <li>Working out at the Gym</li>
+                    <li>Playing Video games </li>
+                    <li>Watching the Philadelphia Eagles</li>
+                    <li>Going for a hike</li>
+                </ul>
         </section>
     
     </main>
