adding photo gallery and other adjustments

--- a/index.html
+++ b/index.html
@@ -49,15 +49,44 @@
 
         <section id="hobbies">
             <!--Section for list of hobbies etc-->
-            <h2>Hobbies: </h2>
+            <h2>Some of my main hobbies include...</h2>
+            <div>
                 <ul>
+                    <li>Going for a hike</li>
                     <li>Cooking and Grilling</li>
                     <li>Reading fiction books</li>
                     <li>Working out at the Gym</li>
                     <li>Playing Video games </li>
                     <li>Watching the Philadelphia Eagles</li>
-                    <li>Going for a hike</li>
                 </ul>
+            </div>
+        </section>
+
+        <section id="gallery">
+            <!--Section for picture gallery-->
+            <h2>Photo Gallery</h2>
+
+            <hr>
+
+            <figure>
+                <img src="img/van-magnolia-640w.jpg" alt="My dog van under a tree">
+                <figcaption> My dog Van sitting under a tree </figcaption>
+            </figure>
+
+            <hr>
+
+            <figure>
+                <img src="img/lundin-links-640w.jpg" alt="A shot at a golfcourse in Scotland">
+                <figcaption> I took this picture during my 2015 trip to Scotland. </figcaption>
+            </figure>
+
+            <hr>
+            <figure>
+                <img src="img/van-bed-640w.jpg" alt="A picture of my dog Van looking out the window">
+                <figcaption> Here is a picture of Van looking out the window, keeping the neighborhood safe. </figcaption>
+            </figure>
+
+
         </section>
     
     </main>
