--- a/index.html
+++ b/index.html
@@ -88,6 +88,24 @@
 
 
         </section>
+
+        <article id="lit">
+
+            <h2>A piece of the life of Samuel Johnson</h2>
+
+            <div>
+                <p>Had Dr. Johnson written his own life, in conformity with the opinion which he has given, that every man's life may be best written by himself; had he employed in the preservation of his own history, that clearness of narration and elegance of language in which he has embalmed so many eminent persons, the world would probably have had the most perfect example of biography that was ever exhibited. But although he at different times, in a desultory manner, committed to writing many particulars of the progress of his mind and fortunes, he never had persevering diligence enough to form them into a regular composition. Of these memorials a few have been preserved; but the greater part was consigned by him to the flames, a few days before his death.</p>
+
+                <p>As I had the honour and happiness of enjoying his friendship for upwards of twenty years; as I had the scheme of writing his life constantly in view; as he was well apprised of this circumstance, and from time to time obligingly satisfied my inquiries, by communicating to me the incidents of his early years; as I acquired a facility in recollecting, and was very assiduous in recording, his conversation, of which the extraordinary vigour and vivacity constituted one of the first features of his character; and as I have spared no pains in obtaining materials concerning him, from every quarter where I could discover that they were to be found, and have been favoured with the most liberal communications by his friends; I flatter myself that few biographers have entered upon such a work as this, with more advantages; independent of literary abilities, in which I am not vain enough to compare myself with some great names who have gone before me in this kind of writing.</p>
+
+                <p>Instead of melting down my materials into one mass, and constantly speaking in my own person, by which I might have appeared to have more merit in the execution of the work, I have resolved to adopt and enlarge upon the excellent plan of Mr. Mason, in his Memoirs of Gray. Wherever narrative is necessary to explain, connect, and supply, I furnish it to the best of my abilities; but in the chronological series of Johnson's life, which I trace as distinctly as I can, year by year, I produce, wherever it is in my power, his own minutes, letters or conversation, being convinced that this mode is more lively, and will make my readers better acquainted with him, than even most of those were who actually knew him, but could know him only partially; whereas there is here an accumulation of intelligence from various points, by which his character is more fully understood and illustrated.</p>
+
+                <p>Indeed I cannot conceive a more perfect mode of writing any man's life, than not only relating all the most important events of it in their order, but interweaving what he privately wrote, and said, and thought; by which mankind are enabled as it were to see him live, and to 'live o'er each scene' with him, as he actually advanced through the several stages of his life. Had his other friends been as diligent and ardent as I was, he might have been almost entirely preserved. As it is, I will venture to say that he will be seen in this work more completely than any man who has ever yet lived.</p>
+
+
+            </div>
+
+        </article>
     
     </main>
     <footer>
