changed lit header

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <article id="lit">
 
-            <h2>A piece of the life of Samuel Johnson</h2>
+            <h2>A Passage From Samuel Johnson</h2>
 
             <div>
                 <p>Had Dr. Johnson written his own life, in conformity with the opinion which he has given, that every man's life may be best written by himself; had he employed in the preservation of his own history, that clearness of narration and elegance of language in which he has embalmed so many eminent persons, the world would probably have had the most perfect example of biography that was ever exhibited. But although he at different times, in a desultory manner, committed to writing many particulars of the progress of his mind and fortunes, he never had persevering diligence enough to form them into a regular composition. Of these memorials a few have been preserved; but the greater part was consigned by him to the flames, a few days before his death.</p>
