added link to eagles sb highlights under hobbies

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <li>Reading fiction books</li>
                     <li>Working out at the Gym</li>
                     <li>Playing Video games </li>
-                    <li>Watching the Philadelphia Eagles</li>
+                    <li><a href="https://www.youtube.com/watch?v=qW1xbhW2PEE">Watching the Philadelphia Eagles!</a></li>
                 </ul>
             </div>
         </section>
