--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <section id="videoman">
             <h2>Me and My Dog Van</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/2EWrXaiuC8Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="myVideo" width="560" height="315" src="https://www.youtube.com/embed/2EWrXaiuC8Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         </section>
     
