--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
             <h2>Me and My Dog Van</h2>
             <iframe id="myVideo" width="560" height="315" src="https://www.youtube.com/embed/2EWrXaiuC8Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+            <p>This is a short video of me in my living room with my best pal, Van.</p>
+
         </section>
     
     </main>
