--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
             <h2>Contact Us:</h2>
 
-            <form id="contactForm" name="contactForm">
+            <form id="contactForm" name="contactForm" method="POST" data-netlify="true">
                 <fieldset>
                     <legend>Contact Form</legend>
 
@@ -150,7 +150,7 @@
 
                     <!-- Message -->
                     <label for="message"> Message (optional)</label>
-                    <textarea id="message" name="message" rows="8">Enter your message here...</textarea>
+                    <textarea id="message" name="message" rows="8" placeholder="Enter your message here..."></textarea>
 
                     <!-- Reply Box -->
                     <fieldset>
@@ -158,11 +158,11 @@
 
                         <ul>
                             <li>
-                                <input type ="radio" id="msg=yes" name="reply" checked>
+                                <input type ="radio" id="msg=yes" name="reply" value="Yes I would like a reply" checked>
                                 <label>Yes I would like a reply</label>
                             </li>
                             <li>
-                                <input type ="radio" id="msg=no" name="reply">
+                                <input type ="radio" id="msg=no" name="reply" value="No reply necessary">
                                 <label> No, thanks.</label>
                             </li>
 
