--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     
         <section id="contact">
 
-            <h2>Contact Us:</h2>
+            <h2>Contact Me:</h2>
 
             <form id="contactForm" name="contactForm" method="POST" data-netlify="true">
                 <fieldset>
