added nav markup and commented current header

--- a/index.html
+++ b/index.html
@@ -17,9 +17,36 @@
 <body>
 
     <header>
+        <nav class ="navbar">
+            <div class="logo">
+                <img src="img/bluebird.svg" alt="blue origami bird"/>
+                <h1 class="logo-title">About Me</h1>
+                </div>
+            <div class="navbar-links">
+                <ul>
+                    <li><a href="#bio" class="nav-links">Home</a></li>
+                    <li><a href="#gallery" class="nav-links">About</a></li>
+                    <li><a href="#lit" class="nav-links">Gallery</a></li>
+                    <li><a href="#contact" class="nav-links">Contact</a></li>
+                </ul>
+            </div>
+
+            </nav>
+    </header>
+
+
+
+
+<!-- 
+    <div class="content">
+  <h2>About Me</h2> 
+
+
+</div>
         <img src="img/bluebird.svg" alt="blue origami bird">
         <h1>Web Dev 1</h1>
     </header>
+ -->
 
     <main>
         <section id="hero">
